Solve most obvious layout problems in perceptron section and center main part content vertically and horizontally

--- a/src/app.css
+++ b/src/app.css
@@ -105,6 +105,13 @@ text {
     }
 }
 
+.main-part {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .hero {
     height: 100vh;
